Products.CMFCore Changelog
==========================

2.2.1-beta (unreleased)
-----------------------


2.2.0 (2010-01-04)
------------------

- Changed GenericSetup import handlers to fail silently if they
  are called in a context that does not contain the items they 
  import.


2.2.0-beta (2009-12-06)
-----------------------

- TypesTool: Made it an ordered container.
  This allows to control the order of the add actions.

- TypeInformation: Removed redundant 'content_icon' property.
  For backwards compatibility old settings containing 'content_icon' instead
  of 'icon_expr' are converted on import. CMFDefault provides the necessary
  upgrade steps for migrating existing sites.

- DynamicType: Added 'getIconURL' method.
  This replaces the now deprecated 'getIcon' method.

- TypeInformation: Added 'getIconExprObject' method.
  This replaces the now deprecated 'getIcon' method.


2.2.0-alpha (2009-11-13)
------------------------

- Got rid of redundant icon related type info properties.
  (https://bugs.launchpad.net/zope-cmf/+bug/397795)

- PortalFolder: Ensure that pasting an object into a folder takes 
  workflow instance creation conditions into account.
  (https://bugs.launchpad.net/zope-cmf/+bug/308947)

- Made calls to reindexObjectSecurity in the membership tool conditional
  after the CMFCatalogAware refactoring.

- PortalFolder: Removed unused ICatalogAware and IWorkflowAware methods.

- CMFCatalogAware: Split up CMFCatalogAware mixin.
  CatalogAware, WorkflowAware and OpaqueItemManager are now separate mixins.

- Changed testing.py to directly load zope.traversing's ZCML instead of going
  via the Five traversing.zcml BBB shim.

- moved the Zope dependency to version 2.12.0b3dev

- PortalFolder: Modified allowedContentTypes method to check 
  isConstructionAllowed only for allowed types, not for all content types.

- Fixed typo in the acquisition wrapping of the found utility in
  getToolByName.
