@@ -4,6 +4,9 @@ Products.CMFCore Changelog
 2.2.1-beta (unreleased)
 -----------------------
 
+- Actions: Return None if 'link_target' is an empty string.
+  This helps to avoid invalid empty 'target' attributes in HTML output.
+
 
 2.2.0 (2010-01-04)
 ------------------
